@@ -200,3 +200,4 @@ v 2.0:
 	- Fix Synchronization on adding subgroups (thanks snowleo).
 	- Remove info node support from GlobalGroups. It should not have them as GlobalGroups are only permission collections.
 	- Change order of data in Users.yml to [name, Group, SubGroup, Permissions, Info nodes].
+	- Add alphabetically sorted user lists.
